# bjc-core

./: .gitignore  Cargo.toml  bjc.onnx  catboost.ipynb  data.csv
benches/: benchmark.rs
src/: lib.rs
src/game/: mod.rs  pre_round.rs  round.rs
src/models/: card.rs  cards.rs  dealer_pattern.rs  deck.rs  hand.rs  mod.rs  pre_round_pattern.rs  rule.rs
src/models/dealer_pattern/: ace_patterns.rs  face_patterns.rs  n2_patterns.rs  n3_patterns.rs  n4_patterns.rs  n5_patterns.rs  n6_patterns.rs  n7_patterns.rs  n8_patterns.rs  n9_patterns.rs
