[package]
name = "bjc"
version = "0.1.0"
edition = "2021"

[dependencies]
num-rational = { version = "0.4.0", features = ["serde"] }
serde = { version = "1.0.217", features = ["derive"] }
rayon = "1.10"
num = { version = "0.4.3", features = ["serde"] }
maplit = "1.0"
smallvec = "1.13.2"
tokio-util = "0.7.13"
tokio = { version = "1.43.0", features = ["full"] }

ndarray = {version="0.16.1", optional = true }
ort = { version="2.0.0-rc.9", features = [ "load-dynamic" ], optional = true }

[dev-dependencies]
criterion = "0.5.1"

[features]
onnx = ["ndarray", "ort"]

[[bench]]
name = "benchmark"
harness = false

[lib]
name = "bjc"
path = "src/lib.rs"
